--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "description": "open movie database",
   "main": "index.js",
   "scripts": {
-    "test": "jest mocha"
+    "test": "jest mocha",
+    "lint": "eslint ./src --fix"
   },
   "keywords": [
     "test",
     "development"
   ],
   "author": "Natalia MH <nataliamh.88qgmail.com>",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "eslint": "^5.6.1",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0"
+  }
 }
