--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "open movie database",
   "main": "index.js",
   "scripts": {
-    "test": "jest mocha",
+    "test": "jest",
     "lint": "eslint ./src --fix"
   },
   "keywords": [
@@ -16,6 +16,10 @@
   "devDependencies": {
     "eslint": "^5.6.1",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0"
+    "eslint-plugin-import": "^2.14.0",
+    "jest": "^23.6.0"
+  },
+  "dependencies": {
+    "node-fetch": "^2.2.0"
   }
 }
