--- a/package.json
+++ b/package.json
@@ -14,17 +14,15 @@
   "author": "Natalia MH <nataliamh.88qgmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "chai": "^4.2.0",
     "eslint": "^5.6.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
-    "jest": "^23.6.0"
+    "jest": "^23.6.0",
+    "mocha": "^5.2.0"
   },
   "dependencies": {
     "node-fetch": "^2.2.0",
     "requirejs-babel": "0.0.9"
-  },
-  "env": {
-    "jest": true
   }
-  
 }
